--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Projecten</a>
           </li>
         </ul>
       </div>
@@ -69,7 +69,12 @@
           <div class="subheading mb-5"> Hardesteinstraat 3 · 8012ES, Zwolle · (06) 33697701 ·
             <a href="mailto:michaelhoner@hotmail.com">michaelhoner@hotmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">Ik ben al een geruime jaar aan het orienteren naar de mogelijkheden om een carriere switch te maken
+            naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een deeltijd-opleiding die ik mooi kan combineren naast mijn
+            huidige werk.</p><p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van m'n web-development skills via zelfstudie.
+            Bijvoorbeeld door het volgen van online cursussen van freeCodeCamp en via een handige app Sololearn,
+            waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
+            Dit doe ik in mijn vrije tijd naast werk.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -91,7 +96,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Ervaring</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
