--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Michael HonerTEST</span>
+        <span class="d-block d-lg-none">Michael Honer</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/pasfoto.jpg" alt="">
         </span>
@@ -64,7 +64,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Michael
-            <span class="text-primary">Honer</span>
+            <span class="text-primary">HonerTEST</span>
           </h1>
           <div class="subheading mb-5"> Hardesteinstraat 3 · 8012ES, Zwolle · (06) 33697701 ·
             <a href="mailto:michaelhoner@hotmail.com">michaelhoner@hotmail.com</a>
