--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Michael
-            <span class="text-primary">HonerTEST</span>
+            <span class="text-primary">Honer</span>
           </h1>
           <div class="subheading mb-5"> Hardesteinstraat 3 · 8012ES, Zwolle · (06) 33697701 ·
             <a href="mailto:michaelhoner@hotmail.com">michaelhoner@hotmail.com</a>
           </div>
           <p class="lead mb-5">Ik ben al een geruime jaar aan het orienteren naar de mogelijkheden om een carriere switch te maken
-            naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een deeltijd-opleiding die ik mooi kan combineren naast mijn
+            naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een HBO Bachelor deeltijd-opleiding die ik mooi kan combineren naast mijn
             huidige werk.</p><p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van m'n web-development skills via zelfstudie.
             Bijvoorbeeld door het volgen van online cursussen van freeCodeCamp en via een handige app Sololearn,
             waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
             Dit doe ik in mijn vrije tijd naast werk.</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/michael-honer-74748ab1/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/michaelhoner">
               <i class="fab fa-github"></i>
             </a>
             <!--<a href="#">
