--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <p class="lead mb-5">Ik ben al een geruime jaar aan het orienteren naar de mogelijkheden om een carriere switch te maken
             naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een HBO Bachelor deeltijd-opleiding die ik mooi kan combineren naast mijn
-            huidige werk.</p><p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van m'n web-development skills via zelfstudie.
+            huidige werk.</p><p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van mijn web-development skills via zelfstudie.
             Bijvoorbeeld door het volgen van online cursussen van freeCodeCamp en via een handige app Sololearn,
             waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
             Dit doe ik in mijn vrije tijd naast werk.</p>
@@ -85,7 +85,7 @@
             <!--<a href="#">
               <i class="fab fa-twitter"></i>
             </a>-->
-            <a href="#">
+            <a href="https://www.facebook.com/michael.honer.942">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
