--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
           </div>
           <p class="lead mb-5">Ik ben al een geruime jaar aan het orienteren naar de mogelijkheden om een carriere switch te maken
             naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een HBO Bachelor deeltijd-opleiding die ik mooi kan combineren naast mijn
-            huidige werk.</p><p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van mijn web-development skills via zelfstudie.
-            Bijvoorbeeld door het volgen van online cursussen van freeCodeCamp en via een handige app Sololearn,
+            huidige werk.</p>
+            <p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie.
+            Bijvoorbeeld door het volgen van online cursussen van o.a. freeCodeCamp en via een handige app Sololearn,
             waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
             Dit doe ik in mijn vrije tijd naast werk.</p>
           <div class="social-icons">
@@ -85,8 +86,8 @@
             <!--<a href="#">
               <i class="fab fa-twitter"></i>
             </a>-->
-            <a href="https://www.facebook.com/michael.honer.942">
-              <i class="fab fa-facebook-f"></i>
+            <!--<a href="https://www.facebook.com/michael.honer.942">
+              <i class="fab fa-facebook-f"></i>-->
             </a>
           </div>
         </div>
@@ -98,14 +99,14 @@
         <div class="my-auto">
           <h2 class="mb-5">Ervaring</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <!--<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Logistiek Medewerker</h3>
+              <div class="subheading mb-3">Merksteijn Staalcoating B.V.</div>
               <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">Oktober 2015 - Heden</span>
             </div>
           </div>
 
@@ -140,7 +141,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2008 - June 2010</span>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
@@ -150,28 +151,26 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Opleiding</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Deltion College, Zwolle</h3>
+              <div class="subheading mb-3">OJKL Beveiliging MBO</div>
+              <div>Oriëntatie jaar Koninklijke Landmacht</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">Augustus 2006 - Juli 2007</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Carmel College Salland, Raalte</h3>
+              <div class="subheading mb-3">VMBO Theoretisch niv. 4</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">Augustus 2000 - Juli 2005</span>
             </div>
           </div>
 
@@ -182,9 +181,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Vaardigheden</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Programmeertalen</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -193,6 +192,12 @@
               <i class="fab fa-css3-alt"></i>
             </li>
             <li class="list-inline-item">
+              <i class="fab fa-js"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-java"></i>
+            </li>
+            <!--<li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
@@ -221,23 +226,23 @@
             </li>
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
-            </li>
+            </li>-->
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Progressie</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              HTML5</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              CSS3</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Javascript</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Java</li>
           </ul>
         </div>
       </section>
@@ -246,9 +251,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <h2 class="mb-5">Interesses</h2>
+          <!--<p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>-->
         </div>
       </section>
 
@@ -256,8 +261,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
+          <h2 class="mb-5">Projecten</h2>
+          <!--<ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Google Analytics Certified Developer</li>
@@ -286,7 +291,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
-      </section>
+      </section>-->
 
     </div>
 
