--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deltion College, Zwolle</h3>
               <div class="subheading mb-3">OJKL Beveiliging MBO</div>
-              <div>Oriëntatie jaar Koninklijke Landmacht</div>
+              <div>Oriëntatie jaar Koninklijke Landmacht &amp Beveiliging</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Augustus 2006 - Juli 2007</span>
@@ -168,6 +168,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Carmel College Salland, Raalte</h3>
               <div class="subheading mb-3">VMBO Theoretisch niv. 4</div>
+              <div>Theoretische leerweg VMBO niveau 4</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Augustus 2000 - Juli 2005</span>
@@ -262,6 +263,15 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Projecten</h2>
+
+          <div class="subheading mb-3">Huidige Projecten</div>
+          <div><a href="https://michaelhoner.github.io/">https://michaelhoner.github.io/</a></div><br>
+          <div class="subheading mb-3">Lopende Projecten</div>
+          <div>Tribute Page</div>
+          <div>Survey Form</div>
+          <div>Product Landing Page</div>
+          <div>Technical Documentation Page</div>
+          <div>Personal Portfolio Webpage</div>
           <!--<ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
