--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een HBO Bachelor deeltijd-opleiding die ik mooi kan combineren naast mijn
             huidige werk.</p>
             <p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie.
-            Bijvoorbeeld door het volgen van online cursussen van o.a. freeCodeCamp en via een handige app Sololearn,
+            Bijvoorbeeld door het volgen van online cursussen van o.a. <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a> en via een handige app Sololearn,
             waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
             Dit doe ik in mijn vrije tijd naast werk.</p>
           <div class="social-icons">
@@ -101,47 +101,26 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Logistiek Medewerker</h3>
-              <div class="subheading mb-3">Merksteijn Staalcoating B.V.</div>
-              <p>#</p>
+              <h3 class="mb-0">Web Developer in opleiding</h3>
+              <div class="subheading mb-3">Autodidact</div>
+              <p>Ik heb een aantal online cursussen gedaan en momenteel ben ik bezig met de Responsive Web Design cursus van <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>.
+                Op de site wordt mijn progessie bijgehouden en weergeven en op het eind moet ik een aantal projecten maken.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Oktober 2015 - Heden</span>
-            </div>
-          </div>
-
-          <!--<div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">September 2018 - Heden</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Logistiek Medewerker</h3>
+              <div class="subheading mb-3">Merksteijn Staalcoating B.V.</div>
+              <p>Het rijden en neerzetten van lege en volle trailers. Materiaal herpakken en laden op de trailer met behulp van heftruck en kraan.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">Oktober 2015 - Heden</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>-->
 
         </div>
 
@@ -253,8 +232,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interesses</h2>
-          <!--<p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>-->
+          <p>In mijn vrije tijd ben ik veelal bezig met mijn ontwikkeling in programmeren. Ik was begonnen met een introductie cursus van Java
+            wat ik heel interessant vond en mijn enthausiasme voor programmeren heeft gewekt. 
+            Momenteel hou ik me bezig met HTML, CSS en Javascript.</p>
+          <p class="mb-0">Naast programmeren in mijn vrije tijd speel ik voetbal, ga ik af en toe wandelen/skeeleren met mijn vriendin en kijk ik Netflix op de bank.</p>
         </div>
       </section>
 
@@ -272,36 +253,10 @@
           <div>Product Landing Page</div>
           <div>Technical Documentation Page</div>
           <div>Personal Portfolio Webpage</div>
-          <!--<ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
+          <div>Merksteijn Rooster Poedercoat afdeling</div>
+          
         </div>
-      </section>-->
+      </section>
 
     </div>
 
