--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Michael Honer</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/pasfoto.jpg" alt="">
+          <img class="img-fluid img-profile rounded mx-auto mb-2" src="img/pasfoto2.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,13 +69,8 @@
           <div class="subheading mb-5"> Hardesteinstraat 3 · 8012ES, Zwolle · (06) 33697701 ·
             <a href="mailto:michaelhoner@hotmail.com">michaelhoner@hotmail.com</a>
           </div>
-          <p class="lead mb-5">Ik ben al een geruime jaar aan het orienteren naar de mogelijkheden om een carriere switch te maken
-            naar de IT wereld. Zo ben ik bijvoorbeeld opzoek naar een HBO Bachelor deeltijd-opleiding die ik mooi kan combineren naast mijn
-            huidige werk.</p>
-            <p class="lead mb-5">En onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie.
-            Bijvoorbeeld door het volgen van online cursussen van o.a. <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a> en via een handige app Sololearn,
-            waarmee je van verschillende programmeer-talen introducties/cursussen kan volgen op je telefoon.
-            Dit doe ik in mijn vrije tijd naast werk.</p>
+          <p class="lead mb-5">Ik ben al een geruim jaar aan het oriënteren naar de mogelijkheden om een carrièreswitch te maken naar de IT wereld. Zo ben ik momenteel op zoek naar een deeltijd HBO Bachelor die ik goed kan combineren met mijn huidige werk.</p>
+          <p class="lead mb-5">Onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie. Ik volg diverse online cursussen van onder andere <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>, via de app Sololearn. Hiermee kun je van verschillende programmeertalen introducties of cursussen volgen op je telefoon. Dit doe ik in mijn vrije tijd.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/michael-honer-74748ab1/">
               <i class="fab fa-linkedin-in"></i>
@@ -101,24 +96,24 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer in opleiding</h3>
+              <h3 class="mb-0">Web Developer in spe</h3>
               <div class="subheading mb-3">Autodidact</div>
-              <p>Ik heb een aantal online cursussen gedaan en momenteel ben ik bezig met de Responsive Web Design cursus van <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>.
-                Op de site wordt mijn progessie bijgehouden en weergeven en op het eind moet ik een aantal projecten maken.</p>
+              <p>Ik heb een aantal online cursussen gevolgd en momenteel ben ik bezig met de Responsive Web Design cursus van <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>.
+                Op de site wordt mijn progessie bijgehouden en weergegeven. Aan het einde van de cursus moet ik een aantal projecten ontwikkelen.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2018 - Heden</span>
+              <span class="text-primary">september 2018 - heden</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Logistiek Medewerker</h3>
+              <h3 class="mb-0">Logistiek Medewerker en kwaliteitscontrole</h3>
               <div class="subheading mb-3">Merksteijn Staalcoating B.V.</div>
-              <p>Het rijden en neerzetten van lege en volle trailers. Materiaal herpakken en laden op de trailer met behulp van heftruck en kraan.</p>
+              <p>De kwaliteit van materiaal controleren. Het rijden en neerzetten van lege en volle trailers. Materiaal herpakken en laden op de trailer met behulp van heftruck en kraan.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Oktober 2015 - Heden</span>
+              <span class="text-primary">oktober 2015 - heden</span>
             </div>
           </div>
 
@@ -136,10 +131,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deltion College, Zwolle</h3>
               <div class="subheading mb-3">OJKL Beveiliging MBO</div>
-              <div>Oriëntatie jaar Koninklijke Landmacht &amp Beveiliging</div>
+              <div>Oriëntatiejaar Koninklijke Landmacht &amp Beveiliging</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Augustus 2006 - Juli 2007</span>
+              <span class="text-primary">augustus 2006 - juli 2007</span>
             </div>
           </div>
 
@@ -150,7 +145,7 @@
               <div>Theoretische leerweg VMBO niveau 4</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Augustus 2000 - Juli 2005</span>
+              <span class="text-primary">augustus 2000 - juli 2005</span>
             </div>
           </div>
 
@@ -232,10 +227,11 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interesses</h2>
-          <p>In mijn vrije tijd ben ik veelal bezig met mijn ontwikkeling in programmeren. Ik was begonnen met een introductie cursus van Java
-            wat ik heel interessant vond en mijn enthausiasme voor programmeren heeft gewekt. 
-            Momenteel hou ik me bezig met HTML, CSS en Javascript.</p>
-          <p class="mb-0">Naast programmeren in mijn vrije tijd speel ik voetbal, ga ik af en toe wandelen/skeeleren met mijn vriendin en kijk ik Netflix op de bank.</p>
+          <p>In mijn vrije tijd ben ik veel bezig met mijn persoonlijke ontwikkeling in programmeren. Ik ben begonnen met een introductiecursus van Java
+            wat ik heel interessant vind en dit heeft mijn enthausiasme voor het programmeren heeft gewekt. 
+            Momenteel houd ik me bezig met HTML, CSS en Javascript.</p>
+          <p class="mb-0">Naast programmeren speel ik voetbal in mijn vrije tijd , ga ik af en toe wandelen en skeeleren met mijn vriendin en kijk ik Netflix op de bank.
+            Mijn favoriete serie op het moment is La Casa de Papel.</p>
         </div>
       </section>
 
