--- a/index.html
+++ b/index.html
@@ -209,15 +209,27 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               HTML5</li>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               CSS3</li>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               Javascript</li>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               Java</li>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
           </ul>
         </div>
       </section>
