--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Michael Honer</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded mx-auto mb-2" src="img/pasfoto2.jpg" alt="">
+          <img class="img-fluid img-profile rounded mx-auto mb-2" src="img/pasfoto3.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -210,25 +210,25 @@
               <i class="fa-li fa fa-check"></i>
               HTML5</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               CSS3</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               Javascript</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               Java</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
           </ul>
         </div>
