--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interesses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Projecten</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -69,8 +69,15 @@
           <div class="subheading mb-5"> Hardesteinstraat 3 · 8012ES, Zwolle · (06) 33697701 ·
             <a href="mailto:michaelhoner@hotmail.com">michaelhoner@hotmail.com</a>
           </div>
+
+          <hr class="m-0">
+          <h3 class="mb-0">Responsive Web Designer</h3>
+          <div class="subheading mb-3">Mobile first development</div>
+          <p>"Realisatie van responsive webdesign met de aandacht op mobile first"</p>
+          <hr class="m-0"><br>
+          
           <p class="lead mb-5">Ik ben al een geruim jaar aan het oriënteren naar de mogelijkheden om een carrièreswitch te maken naar de IT wereld. Zo ben ik momenteel op zoek naar een deeltijd HBO Bachelor die ik goed kan combineren met mijn huidige werk.</p>
-          <p class="lead mb-5">Onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie. Ik volg diverse online cursussen van onder andere <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>, via de app Sololearn. Hiermee kun je van verschillende programmeertalen introducties of cursussen volgen op je telefoon. Dit doe ik in mijn vrije tijd.</p>
+          <p class="lead mb-5">Onlangs ben ik begonnen met het ontwikkelen van mijn programmeer skills via zelfstudie. Ik volg diverse online cursussen van onder andere <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/michael-honer-74748ab1/">
               <i class="fab fa-linkedin-in"></i>
@@ -96,7 +103,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer in spe</h3>
+              <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">Autodidact</div>
               <p>Ik heb een aantal online cursussen gevolgd en momenteel ben ik bezig met de Responsive Web Design cursus van <a href="https://www.freecodecamp.org/michaelhoner">freeCodeCamp</a>.
                 Op de site wordt mijn progessie bijgehouden en weergegeven. Aan het einde van de cursus moet ik een aantal projecten ontwikkelen.</p>
@@ -129,12 +136,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">freeCodeCamp, Zwolle</h3>
+              <div class="subheading mb-3">Responsive Web Design</div>
+              <div>Responsive Web Design Course</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">september 2018 - heden</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Deltion College, Zwolle</h3>
               <div class="subheading mb-3">OJKL Beveiliging MBO</div>
               <div>Oriëntatiejaar Koninklijke Landmacht &amp Beveiliging</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">augustus 2006 - juli 2007</span>
+              <span class="text-primary">september 2006 - juli 2007</span>
             </div>
           </div>
 
@@ -145,7 +163,7 @@
               <div>Theoretische leerweg VMBO niveau 4</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">augustus 2000 - juli 2005</span>
+              <span class="text-primary">september 2000 - juli 2005</span>
             </div>
           </div>
 
@@ -210,13 +228,13 @@
               <i class="fa-li fa fa-check"></i>
               HTML5</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             <li>
               <i class="fa-li fa fa-check"></i>
               CSS3</li>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -249,11 +267,11 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
         <div class="my-auto">
-          <h2 class="mb-5">Projecten</h2>
+          <h2 class="mb-5">Portfolio</h2>
 
-          <div class="subheading mb-3">Huidige Projecten</div>
+          <div class="subheading mb-3">Projecten</div>
           <div><a href="https://michaelhoner.github.io/">https://michaelhoner.github.io/</a></div><br>
           <div class="subheading mb-3">Lopende Projecten</div>
           <div>Tribute Page</div>
@@ -262,11 +280,14 @@
           <div>Technical Documentation Page</div>
           <div>Personal Portfolio Webpage</div>
           <div>Merksteijn Rooster Poedercoat afdeling</div>
+          <div>Blog</div>
           
         </div>
       </section>
 
     </div>
+    <!-- LinkedIn Banner -->
+    <!--<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="nl_NL" data-type="vertical" data-theme="light" data-vanity="michael-honer-74748ab1"><a class="LI-simple-link" href='https://nl.linkedin.com/in/michael-honer-74748ab1?trk=profile-badge'>Michael Honer</a></div>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -277,6 +298,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+
+    <!-- LinkedIn banner script -->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
   </body>
 
