--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interesses</h2>
           <p>In mijn vrije tijd ben ik veel bezig met mijn persoonlijke ontwikkeling in programmeren. Ik ben begonnen met een introductiecursus van Java
-            wat ik heel interessant vind en dit heeft mijn enthausiasme voor het programmeren heeft gewekt. 
+            wat ik heel interessant vind en dit heeft mijn enthausiasme voor het programmeren gewekt. 
             Momenteel houd ik me bezig met HTML, CSS en Javascript.</p>
           <p class="mb-0">Naast programmeren speel ik voetbal in mijn vrije tijd , ga ik af en toe wandelen en skeeleren met mijn vriendin en kijk ik Netflix op de bank.
             Mijn favoriete serie op het moment is La Casa de Papel.</p>
