--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <br>
           <h3 class="mb-0">Responsive Web Designer</h3>
           <div class="subheading mb-3">Mobile first development</div>
-          <p>"Realisatie van responsive webdesign met de aandacht op mobile first"</p>
+          <p>"Realisatie van responsive webdesign met aandacht op mobile first"</p>
           <hr class="m-0"><br>
           
           <p class="lead mb-5">Ik ben al een geruim jaar aan het oriënteren naar de mogelijkheden om een carrièreswitch te maken naar de IT wereld. Zo ben ik momenteel op zoek naar een deeltijd HBO Bachelor die ik goed kan combineren met mijn huidige werk.</p>
@@ -84,6 +84,9 @@
             </a>
             <a href="https://github.com/michaelhoner">
               <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.freecodecamp.org/michaelhoner">
+              <i class="fab fa-free-code-camp"></i>
             </a>
             <!--<a href="#">
               <i class="fab fa-twitter"></i>
