--- a/index.html
+++ b/index.html
@@ -328,7 +328,17 @@
 
   <!-- LinkedIn banner script -->
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-
+  <!--serviceWorker-->
+  <script>if (navigator.serviceWorker.controller) {
+    console.log('[PWA Builder] active service worker found, no need to register')
+  } else {
+    //Register the ServiceWorker
+    navigator.serviceWorker.register('pwabuider-sw.js', {
+      scope: './'
+    }).then(function(reg) {
+      console.log('Service worker has been registered for scope:'+ reg.scope);
+    });
+  }</script>
 </body>
 
 </html>
