--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <!--PWA-->
+  <link rel="manifest" href="manifest.json"></link>
+
 </head>
 
 <body id="page-top">
